training-yaml-files/deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimi-next-app-deployment
  labels:
    app: nextjs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: nextjs
        image: nextjs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextjs
  name: cimi-next-app-service
spec:
  type: ClusterIP #Default
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nextjs
