training-yaml-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cimi-next-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: cimi.next.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cimi-next-app-service
            port:
              number: 80
